mengganti nama tombol dan posisi function

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             class="btn-add bg-green-500"
             onclick="addTask();"
           >
-            +
+            add
           </button>
         </div>
       </form>
@@ -100,18 +100,22 @@
               </button>
             </div>
           </div>
-          <button type="button" class="btn-delete" onclick="removeAllTask();">
-            Delete All
+          <button type="button" class="btn-delete" onclick="deleteAllTask();">
+            Delete All Task
           </button>
         </div>
 
         <header>
-          <h2 class="title-h2">Task List</h2>
+          <h2 class="title-h2">List of Task</h2>
         </header>
 
         <div id="todo-list">
           <p>No tasks available</p>
         </div>
+
+        <footer class="mt-8 text-center">
+          <p>&copy; 2025 Ramdika To do List</p>
+        </footer>
       </section>
     </main>
 
