--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             class="btn-add bg-green-500"
             onclick="addTask();"
           >
-            add
+            Add
           </button>
         </div>
       </form>
